--- a/index.css
+++ b/index.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
+*{
+    font-family: "Ubuntu", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
 body{
     margin: 0;
     padding: 0;
@@ -21,7 +29,7 @@ nav ul{
 
 h2{
     text-align: center;
-    margin: 0;
+    margin: 0px 0px 20px 0px;
 }
 
 li{
@@ -35,9 +43,34 @@ section{
     height: 100%;
 }
 
+.navButton button, .createEvent button{
+    position: relative;
+    background-color: #6191d8;
+    padding: 10px 22px;
+    border-radius: 6px;
+    color: #fff;
+    border: none;
+    font-size: 18px;
+    font-weight: 400;
+    cursor: pointer;
+    transition: transform 0.2s ease;
+    box-shadow: 0 5px, 10px, rgba(0, 0 ,0, 0.1);
+}
+
+.navButton button{
+    background-color: #dbdbdb;
+    color: #707070;
+}
+
+.navButton button:active, .createEvent button:active{
+    transform: scale(0.90);
+}
+
+
 .calendar{
     width: 90%;
     height: 100%;
+    padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -58,25 +91,23 @@ section{
 }
 
 .button{
-    margin: 20px;
+    margin: 20px 0px 20px 0px; 
     text-align: center;
 }
 
 .days{
     display: grid;
-    align-items: center;
-    text-align: center;
     grid-template-columns: repeat(7, 1fr);
 }
 
 .day{
     text-align: center;
-    padding: 5px;
 }
 
 .dates{
     display: grid;
     grid-template-columns: repeat(7, 1fr);
+    column-gap: 10px;
 }
 
 .date{
@@ -87,22 +118,21 @@ section{
     cursor: pointer;
     background-color: aliceblue;
     border: 1px solid black;
-    border-radius: 2px;
+    border-radius: 10px;
+}
+
+.date_active{
+    border: 1px solid red;
+}
+
+.date_active p{
+    color: red;
 }
 
 /* This customises every div inside the dates (the hours) */
 .date div{
     height: 100%;
 }
-
-/* .zero{
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
-}
-
-.twenty{
-    border-bottom: 1px solid black;
-} */
 
 .date p{
     text-align: center;
@@ -116,10 +146,10 @@ section{
     font-size: 30px;
 }
 
-.calendar_header, .days, .createEvent{
-    flex-grow: 1;
-}
-
 .dates{
     flex-grow: 10;
+}
+
+.date_inactive{
+    color: grey;
 }
