--- a/index.css
+++ b/index.css
@@ -66,7 +66,6 @@ section{
     transform: scale(0.90);
 }
 
-
 .calendar{
     width: 90%;
     height: 100%;
@@ -119,6 +118,7 @@ section{
     background-color: aliceblue;
     border: 1px solid black;
     border-radius: 10px;
+    position: relative;
 }
 
 .date_active{
@@ -137,6 +137,10 @@ section{
 .date p{
     text-align: center;
     margin: 0;
+    position: absolute;
+    top: 3px;
+    width: 100%;
+    border-bottom: 1px solid #707070;
 }
 
 #monthYear{
