--- a/index.css
+++ b/index.css
@@ -12,7 +12,6 @@ body{
     display: flex;
     flex-direction: column;
     height: 100vh;
-
 }
 
 header, section, footer{
@@ -114,7 +113,6 @@ section{
     margin: 5px 0px 5px 0px;
     flex-direction: column;
     justify-content: center;
-    cursor: pointer;
     background-color: aliceblue;
     border: 1px solid black;
     border-radius: 10px;
@@ -129,16 +127,15 @@ section{
     color: red;
 }
 
-/* This customises every div inside the dates (the hours) */
-.date div{
-    height: 100%;
-}
-
-.date p{
+/* Customise the number of the date */
+.date_num{
+    position: absolute;
+    top: 2px;
+    align-self: flex-start;
+    align-items: top;
+    height: 18%;
     text-align: center;
     margin: 0;
-    position: absolute;
-    top: 3px;
     width: 100%;
     border-bottom: 1px solid #707070;
 }
