--- a/index.css
+++ b/index.css
@@ -67,7 +67,6 @@ section{
 
 .calendar{
     width: 90%;
-    height: 100%;
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -112,11 +111,12 @@ section{
     display: flex;
     margin: 5px 0px 5px 0px;
     flex-direction: column;
-    justify-content: center;
+    align-self: flex-start;
     background-color: aliceblue;
     border: 1px solid black;
     border-radius: 10px;
     position: relative;
+    min-height: 110px;
 }
 
 .date_active{
@@ -129,9 +129,6 @@ section{
 
 /* Customise the number of the date */
 .date_num{
-    position: absolute;
-    top: 2px;
-    align-self: flex-start;
     align-items: top;
     height: 18%;
     text-align: center;
@@ -153,4 +150,20 @@ section{
 
 .date_inactive{
     color: grey;
+}
+
+/* Customise the content of the date*/
+.date_content{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-self: flex-start;
+    height: 100%;
+}
+
+.events{
+    margin: 5px 0px;
+    color: black;
+    color: white;
+    background-color: lightblue;
 }
