--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ body{
     padding: 0;
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 header, section, footer{
@@ -164,6 +164,12 @@ section{
 .events{
     margin: 5px 0px;
     color: black;
-    color: white;
     background-color: lightblue;
+    cursor: pointer;
+}
+
+.events p{
+    margin: 0px;
+    padding-left: 3px;
+    color: black;
 }
