--- a/index.css
+++ b/index.css
@@ -42,6 +42,11 @@ section{
     height: 100%;
 }
 
+footer{
+    text-align: center;
+    font-size: 20px;
+}
+
 .navButton button, .createEvent button{
     position: relative;
     background-color: #6191d8;
@@ -104,7 +109,7 @@ section{
 .dates{
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    column-gap: 10px;
+    /* column-gap: 2px; */
 }
 
 .date{
@@ -117,6 +122,7 @@ section{
     border-radius: 10px;
     position: relative;
     min-height: 110px;
+    overflow: hidden;
 }
 
 .date_active{
@@ -159,6 +165,11 @@ section{
     flex-direction: column;
     align-self: flex-start;
     height: 100%;
+}
+
+.date_content p{
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .events{
