--- a/index.css
+++ b/index.css
@@ -119,7 +119,7 @@ footer{
     align-self: flex-start;
     background-color: aliceblue;
     border: 1px solid black;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     position: relative;
     min-height: 110px;
     overflow: hidden;
